<resources>
    <string name="app_name">pomodoroClock</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_main">HomeMainActivit</string>
    <string name="setting_button_text">设置</string>
    <string name="statistics_button_text">数据统计</string>
    <string name="list_button_text">待办</string>
    <string name="tomato_button_text">番茄钟</string>
    <string name="add_word">addWord</string>
    <string name="empty_not_saved">Record not save due to it is empty</string>
    <string name="hint_type">Type…</string>
    <string name="hint_name">Name…</string>
    <string name="button_save">Save</string>
    <string name="totalConcentration">累计专注</string>
    <string name="concentrationTimes">次数</string>
    <string name="totalDuration">总时长</string>
    <string name="perDuration">平均时长</string>
    <string name="dayConcentration">当日专注</string>
    <string name="dayDuration">当日时长</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="duration">持续时间</string>
    <string name="counts">次数</string>
</resources>