<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/record_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_textview_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="@id/record_dialog"
        app:layout_constraintTop_toTopOf="@id/record_dialog">

        <TextView
            android:id="@+id/layout_textview_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/start_time"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/layout_textview_group"
            app:layout_constraintTop_toTopOf="@id/layout_textview_group" />

        <TextView
            android:id="@+id/layout_textview_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/end_time"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/layout_textview_group"
            app:layout_constraintTop_toBottomOf="@id/layout_textview_start_time" />

        <TextView
            android:id="@+id/layout_textview_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/duration"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/layout_textview_group"
            app:layout_constraintTop_toBottomOf="@id/layout_textview_end_time" />

        <TextView
            android:id="@+id/layout_textview_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/counts"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/layout_textview_group"
            app:layout_constraintTop_toBottomOf="@id/layout_textview_duration" />

        <TextView
            android:id="@+id/layout_textview_start_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/app_name"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/layout_textview_group"
            app:layout_constraintTop_toTopOf="@id/layout_textview_group" />


        <TextView
            android:id="@+id/layout_textview_end_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/app_name"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/layout_textview_group"
            app:layout_constraintTop_toBottomOf="@id/layout_textview_start_time_value" />

        <TextView
            android:id="@+id/layout_textview_duration_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/app_name"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/layout_textview_group"
            app:layout_constraintTop_toBottomOf="@id/layout_textview_end_time_value" />

        <TextView
            android:id="@+id/layout_textview_times_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/app_name"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/layout_textview_group"
            app:layout_constraintTop_toBottomOf="@id/layout_textview_duration_value" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>